--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unique TODO List</title>
+  <title>TODO List</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +11,7 @@
   <div class="container py-5">
     <div class="text-center">
       <h1 class="display-4 text-light">My TODO List</h1>
-      <p class="text-light lead">Organize your tasks in style!</p>
+      <p class="text-light lead">Organize your tasks!</p>
     </div>
     <div class="card shadow-lg">
       <div class="card-body">
