--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
   <div class="container py-5">
     <div class="text-center">
-      <h1 class="display-4 text-light">My TODO List</h1>
-      <p class="text-light lead">Organize your tasks!</p>
+      <h1 class="display-4 text-light">Enhanced TODO List</h1>
+      <p class="text-light lead">Track your tasks!</p>
     </div>
     <div class="card shadow-lg">
       <div class="card-body">
         <div class="input-group mb-3">
-          <input id="todo-input" type="text" class="form-control" placeholder="Add a new task">
+          <input id="todo-input" type="text" class="form-control" placeholder="Task description">
+          <input id="todo-time" type="time" class="form-control" placeholder="Time">
           <button id="add-todo" class="btn btn-primary">Add</button>
         </div>
         <ul id="todo-list" class="list-group">
@@ -25,6 +26,6 @@
       </div>
     </div>
   </div>
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
