--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TODO List</title>
+  <title>TODO Lista</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container py-5">
     <div class="text-center">
-      <h1 class="display-4 text-light">Enhanced TODO List</h1>
-      <p class="text-light lead">Track your tasks!</p>
+      <h1 class="display-4 text-light">TODO Lista</h1>
+      <p class="text-light lead">Seuraa tehtäviäis!</p>
     </div>
     <div class="card shadow-lg">
       <div class="card-body">
         <div class="input-group mb-3">
-          <input id="todo-input" type="text" class="form-control" placeholder="Task description">
-          <input id="todo-time" type="time" class="form-control" placeholder="Time">
-          <button id="add-todo" class="btn btn-primary">Add</button>
+          <input id="todo-input" type="text" class="form-control" placeholder="Tehtävän nimi">
+          <input id="todo-time" type="time" class="form-control" placeholder="Milloin tehtynä">
+          <button id="add-todo" class="btn btn-primary">Lisää</button>
         </div>
         <ul id="todo-list" class="list-group">
           <!-- Tasks will appear here -->
